--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,14 @@
 [build]
-  command = "make build"
-  functions = "functions"
+  command = "npm run build"
+  functions = "functions/"
   publish = "build/"
-[build.environment]
-  # Change this path with the path to your repository
-  GO_IMPORT_PATH = "github.com/skyrawrcode/probable-lamp"
+
+[dev]
+	publish = "build/"
+  functions = "functions"
+
+[[redirects]]
+  from = "/functions/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
+  
