--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "netlify-identity-widget": "^1.9.1",
     "node-gyp": "^3.8.0",
     "node-sass": "^4.14.1",
+    "pg-native": "^3.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -45,21 +45,22 @@
     ]
   },
   "devDependencies": {
-    "pg": "^8.5.1",
+    "@types/pg": "^7.14.7",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-typescript": "^7.10.4",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "@types/aws-lambda": "^8.10.59",
     "@types/jest": "^26.0.19",
     "@types/netlify-identity-widget": "^1.9.1",
     "@types/node": "^12.19.9",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "@types/react-router-dom": "^5.1.6",
-    "@types/aws-lambda": "^8.10.59",
     "netlify-lambda": "^2.0.1",
-    "@babel/preset-env": "^7.11.0",
-    "@babel/preset-typescript": "^7.10.4",
-    "typescript": "^4.1.3",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "pg": "^8.5.1",
+    "typescript": "^4.1.3"
   }
 }
