--- a/package.json
+++ b/package.json
@@ -5,9 +5,6 @@
   "dependencies": {
     "bulma": "^0.9.1",
     "netlify-identity-widget": "^1.9.1",
-    "node-gyp": "^3.8.0",
-    "node-sass": "^4.14.1",
-    "pg-native": "^3.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
@@ -45,7 +42,9 @@
     ]
   },
   "devDependencies": {
-    "@types/pg": "^7.14.7",
+    "node-gyp": "^3.8.0",
+    "node-sass": "^4.14.1",
+    "pg-native": "^3.0.0",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-typescript": "^7.10.4",
     "@testing-library/jest-dom": "^5.11.6",
@@ -55,9 +54,11 @@
     "@types/jest": "^26.0.19",
     "@types/netlify-identity-widget": "^1.9.1",
     "@types/node": "^12.19.9",
+    "@types/pg": "^7.14.7",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "@types/react-router-dom": "^5.1.6",
+    "gotrue-js": "^0.9.28",
     "netlify-lambda": "^2.0.1",
     "npm-run-all": "^4.1.5",
     "pg": "^8.5.1",
