--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bulma": "^0.9.1",
     "netlify-identity-widget": "^1.9.1",
+
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
@@ -21,7 +22,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy:draft": "netlify deploy --dir=build --functions=functions",
-    "deploy:prod": "netlify deploy --dir=build --functions=functions --prod"
+    "deploy:prod": "netlify deploy --dir=build --functions=functions --prod",
+    "postinstall": "node fix.js"
   },
   "eslintConfig": {
     "extends": [
@@ -42,8 +44,6 @@
     ]
   },
   "devDependencies": {
-    "node-gyp": "^3.8.0",
-    "node-sass": "^4.14.1",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-typescript": "^7.10.4",
     "@testing-library/jest-dom": "^5.11.6",
@@ -59,9 +59,10 @@
     "@types/react-router-dom": "^5.1.6",
     "gotrue-js": "^0.9.28",
     "netlify-lambda": "^2.0.1",
+    "node-gyp": "^3.8.0",
+    "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "pg": "^8.5.1",
-    "pg-native": "^3.0.0",
     "typescript": "^4.1.3"
   }
 }
