--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "bulma": "^0.9.1",
+    "encoding": "^0.1.13",
+    "faunadb": "^4.0.0",
     "netlify-identity-widget": "^1.9.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -21,7 +23,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy:draft": "netlify deploy --dir=build --functions=functions",
-    "deploy:prod": "netlify deploy --dir=build --functions=functions --prod",
+    "deploy:prod": "netlify deploy --dir=build --functions=functions --prod"
   },
   "eslintConfig": {
     "extends": [
@@ -51,7 +53,6 @@
     "@types/jest": "^26.0.19",
     "@types/netlify-identity-widget": "^1.9.1",
     "@types/node": "^12.19.9",
-    "@types/pg": "^7.14.7",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "@types/react-router-dom": "^5.1.6",
@@ -60,7 +61,7 @@
     "node-gyp": "^3.8.0",
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
-    "pg": "^8.5.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "faunadb": "^4.0.0"
   }
 }
