--- a/package.json
+++ b/package.json
@@ -3,15 +3,40 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/node-fetch": "^2.5.7",
     "bulma": "^0.9.1",
     "encoding": "^0.1.13",
-    "faunadb": "^4.0.0",
     "netlify-identity-widget": "^1.9.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "rxjs": "^6.6.3",
     "web-vitals": "^0.2.4"
+  },
+  "devDependencies": {
+    "@apollo/client": "^3.3.6",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-typescript": "^7.10.4",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.6.0",
+    "@types/aws-lambda": "^8.10.59",
+    "@types/jest": "^26.0.19",
+    "@types/netlify-identity-widget": "^1.9.1",
+    "@types/node": "^12.19.9",
+    "@types/react": "^16.14.2",
+    "@types/react-dom": "^16.9.10",
+    "@types/react-router-dom": "^5.1.6",
+    "faunadb": "^4.0.0",
+    "gotrue-js": "^0.9.28",
+    "graphql": "^15.4.0",
+    "netlify-lambda": "^2.0.1",
+    "node-fetch": "^2.6.1",
+    "node-gyp": "^3.8.0",
+    "node-sass": "^4.14.1",
+    "npm-run-all": "^4.1.5",
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "start": "netlify dev",
@@ -42,26 +67,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/preset-env": "^7.11.0",
-    "@babel/preset-typescript": "^7.10.4",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.6.0",
-    "@types/aws-lambda": "^8.10.59",
-    "@types/jest": "^26.0.19",
-    "@types/netlify-identity-widget": "^1.9.1",
-    "@types/node": "^12.19.9",
-    "@types/react": "^16.14.2",
-    "@types/react-dom": "^16.9.10",
-    "@types/react-router-dom": "^5.1.6",
-    "gotrue-js": "^0.9.28",
-    "netlify-lambda": "^2.0.1",
-    "node-gyp": "^3.8.0",
-    "node-sass": "^4.14.1",
-    "npm-run-all": "^4.1.5",
-    "typescript": "^4.1.3",
-    "faunadb": "^4.0.0"
   }
 }
