--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-wordcloud": "^1.2.7",
     "rxjs": "^6.6.3",
     "web-vitals": "^0.2.4"
   },
