--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/node-fetch": "^2.5.7",
-    "bulma": "^0.9.1",
+    "@tailwindcss/postcss7-compat": "^2.0.2",
     "encoding": "^0.1.13",
+    "netlify-cli": "^3.4.2",
     "netlify-identity-widget": "^1.9.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -16,40 +16,46 @@
     "web-vitals": "^0.2.4"
   },
   "devDependencies": {
-    "@apollo/client": "^3.3.6",
+    "@apollo/client": "^3.3.7",
     "@babel/preset-env": "^7.11.0",
-    "@babel/preset-typescript": "^7.10.4",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.6.0",
-    "@types/aws-lambda": "^8.10.59",
-    "@types/jest": "^26.0.19",
+    "@babel/preset-typescript": "^7.12.7",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.3",
+    "@testing-library/user-event": "^12.6.2",
+    "@types/aws-lambda": "^8.10.71",
+    "@types/jest": "^26.0.20",
     "@types/netlify-identity-widget": "^1.9.1",
-    "@types/node": "^12.19.9",
+    "@types/node": "^12.19.15",
+    "@types/node-fetch": "^2.5.8",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
-    "@types/react-router-dom": "^5.1.6",
+    "@types/react-router-dom": "^5.1.7",
+    "autoprefixer": "^9.8.6",
     "faunadb": "^4.0.0",
     "gotrue-js": "^0.9.28",
     "graphql": "^15.4.0",
-    "netlify-lambda": "^2.0.1",
+    "netlify-lambda": "^2.0.3",
     "node-fetch": "^2.6.1",
     "node-gyp": "^3.8.0",
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.2.4",
+    "postcss-cli": "^8.3.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "typescript": "^4.1.3"
   },
   "scripts": {
     "start": "netlify dev",
-    "start:app": "react-scripts start",
+    "start:app": "npm run watch:css && react-scripts start",
     "start:lambda": "netlify-lambda build src/functions",
     "build": "run-p build:**",
-    "build:app": "react-scripts build",
+    "build:app": "npm run watch:css && react-scripts build",
     "build:lambda": "netlify-lambda build src/functions",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy:draft": "netlify deploy --dir=build --functions=functions",
-    "deploy:prod": "netlify deploy --dir=build --functions=functions --prod"
+    "deploy:prod": "netlify deploy --dir=build --functions=functions --prod",
+    "watch:css": "postcss src/index.css -o src/main.css"
   },
   "eslintConfig": {
     "extends": [
